exports[`test should render its children 1`] = `
<header
  className="page-header">
  <i
    className="spinner" />
  <span>
    children test
  </span>
  <span
    className="page-totalcount">
    <strong>
      5
    </strong>
     
    organization.members.member(s)
  </span>
</header>
`;

exports[`test should render the members page header 1`] = `
<header
  className="page-header" />
`;

exports[`test should render the members page header 2`] = `
<i
  className="spinner" />
`;

exports[`test should render the members page header with the total 1`] = `
<header
  className="page-header">
  <span
    className="page-totalcount">
    <strong>
      5
    </strong>
     
    organization.members.member(s)
  </span>
</header>
`;
